<resources>
    <string name="app_name">AppExchance</string>
    <string name="title_activity_form_cadastro_intercambista">Cadastro</string>
    <string name="escolha_seu_tipo_usuario"> Escolha seu tipo de usuário.</string>
    <string name="intercambista"> Intercambista</string>
    <string name="host_family"> Host Family</string>
    <string name="pular"> Pular</string>
    <string name="seja_bem_vindo"> Seja Bem-Vindo à Exchance.</string>
    <string name="entrar"> Entrar</string>
    <string name="cadastro"> Cadastre-se</string>
    <string name="login"> Login </string>
    <string name="acessar"> Acessar </string>
    <string name="esqueceu_senha"> Esqueceu sua senha? Clique aqui.</string>
    <string name="criar_cadastro"> Ainda não tem conta? Clique aqui.</string>
    <string name="tem_conta"> Já tem conta? Clique aqui. </string>

    <string-array name="opcoes_usuario">
        <item> Intercambista </item>
        <item> Host Family </item>
    </string-array>

    <string name="bem_vindo">Bem-Vinda Anna!</string>
    <string name="onde_ir">Para onde ir?</string>
    <string name="buscas_populares">Buscas Populares</string>
    <string name="cidades">Cidades</string>
    <string name="frase_menu">Encontre a Host Family mais próxima do seu local de intercambio.</string>
    <string name="paises">Paises</string>
    <string name="menu">Menu</string>
    <string name="historico">Histórico</string>
    <string name="chat"> Chat</string>
    <string name="perfil"> Perfil</string>
    
    
    <string name="meu_perfil">Meu Perfil</string>
    <string name="editar">Editar os detalhes</string>
    <string name="favoritos">Lista de Favoritos</string>
    <string name="confg">Configurações</string>
    <string name="usuario_host"> Familia Jones</string>
    <string name="usuario_inter"> Anna Alves</string>
    
    

</resources>