<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosinha"
    tools:context=".TelaUsuarioHost">


    <ImageView
        android:layout_width="79dp"
        android:layout_height="67dp"
        android:layout_marginStart="52dp"
        android:src="@drawable/img_usua_host"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="26dp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="37dp"
        android:src="@drawable/verificado_rosa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/nome_usuario_host"
        style="@style/TitleText"
        android:layout_width="226dp"
        android:layout_height="34dp"
        android:layout_margin="20dp"
        android:text="@string/usuario_host"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="47dp"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/conteiner_menu"
        android:layout_width="415dp"
        android:layout_height="680dp"
        android:layout_margin="20dp"
        android:background="@drawable/view_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_usuario_host"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/icon_meu_perfil"
        android:layout_width="64dp"
        android:layout_height="47dp"
        android:layout_marginTop="96dp"
        android:src="@drawable/perfil"
        app:layout_constraintEnd_toEndOf="@+id/conteiner_menu"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="@+id/conteiner_menu"
        app:layout_constraintTop_toBottomOf="@+id/nome_usuario_host"
        app:layout_constraintTop_toTopOf="@+id/conteiner_menu"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/opcao_perfil"
        style="@style/Opcoes_Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/meu_perfil"
        app:layout_constraintTop_toBottomOf="@+id/nome_usuario_host"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="123dp" />

    <ImageView
        android:id="@+id/icon_editar"
        android:layout_width="64dp"
        android:layout_height="45dp"
        android:src="@drawable/editar_imagem"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="259dp"
        app:layout_constraintTop_toBottomOf="@+id/icon_meu_perfil"/>

    <TextView
        android:id="@+id/opcao_editar"
        style="@style/Opcoes_Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:layout_marginTop="40dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="268dp"
        app:layout_constraintTop_toBottomOf="@+id/opcao_perfil"/>

    <ImageView
        android:id="@+id/icon_favoritos"
        android:layout_width="62dp"
        android:layout_height="41dp"
        android:src="@drawable/favorito"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="333dp"
        app:layout_constraintTop_toBottomOf="@+id/icon_editar"/>

    <TextView
        android:id="@+id/opcao_favorito"
        style="@style/Opcoes_Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:layout_marginTop="40dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="342dp"
        app:layout_constraintTop_toBottomOf="@+id/opcao_editar"/>

    <ImageView
        android:id="@+id/icon_config"
        android:layout_width="64dp"
        android:layout_height="47dp"
        android:src="@drawable/engrenagem_config"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="403dp"
        app:layout_constraintTop_toBottomOf="@+id/icon_favoritos"/>

    <TextView
        android:id="@+id/opcao_config"
        style="@style/Opcoes_Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confg"
        android:layout_marginTop="40dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="415dp"
        app:layout_constraintTop_toBottomOf="@+id/opcao_favorito"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_busca"
            android:textSize="12sp"
            android:text="Dados usuario"
            tools:ignore="MissingConstraints" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>