<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tela_opcao_usuario">

<<<<<<< HEAD
=======

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        </LinearLayout>
>>>>>>> e38534c6157714f50c8e0165b1a3971245df837e

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frase_opcoes"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/escolha_seu_tipo_usuario"
            android:textColor="@color/rosinha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            tools:ignore="MissingConstraints" />



            <Button
<<<<<<< HEAD
                android:id="@+id/buttun_inter"
                style="@style/Button_Login"
=======
                android:id="@+id/button_inter"
                style="@style/Botoes"
                android:layout_width="650px"
                android:layout_height="wrap_content"
>>>>>>> e38534c6157714f50c8e0165b1a3971245df837e
                android:text="@string/intercambista"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/btn1"
                android:layout_marginTop="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frase_opcoes"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button_host"
<<<<<<< HEAD
                style="@style/Button_Login"
=======
                style="@style/Botoes"
                android:layout_width="650px"
                android:layout_height="wrap_content"
>>>>>>> e38534c6157714f50c8e0165b1a3971245df837e
                android:text="@string/host_family"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/btn1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttun_inter"
                tools:ignore="MissingConstraints" />

<<<<<<< HEAD
<!--            <Button-->
<!--                style="@style/BotaoRignt"-->
<!--                android:layout_width="160dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/btn1"-->
<!--                android:fontFamily="sans-serif-medium"-->
<!--                android:text="@string/pular"-->
<!--                android:textColor="@color/white"-->
<!--                tools:ignore="MissingConstraints"-->
<!--                tools:layout_editor_absoluteX="211dp"-->
<!--                tools:layout_editor_absoluteY="645dp" />-->
=======
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_pular"
                style="@style/BotaoRignt"
                android:layout_width="500px"
                android:layout_height="wrap_content"
                android:text="@string/pular"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/btn1"/>

        </RelativeLayout>


    </LinearLayout>
>>>>>>> e38534c6157714f50c8e0165b1a3971245df837e

</androidx.constraintlayout.widget.ConstraintLayout>